Fix CSS transition syntax and center align content
Corrected CSS transition property syntax and adjusted alignment.

--- a/css/index.css
+++ b/css/index.css
@@ -754,7 +754,7 @@ section#product div.wrap ul{
 	}
 section#product div.wrap ul li {
   width: calc(100% / 8);
-  transition: transform .2s ease;
+  \: transform .2s ease;
 }
 section#product div.wrap ul li:hover {
    transform: translateY(-10px); 
@@ -765,12 +765,11 @@ section#product div.wrap ul li a {
   border-radius: 15px;
   height: 100px;
   line-height: 1.2;
-  padding-left: 30px;
 }
 section#product div.wrap ul li a figure {
   gap: 10px;
   height: 100%;
-  justify-content: left;
+  justify-content: center;
   align-items: center;
 }
 section#product div.wrap ul li a figure img {
